--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
 }
 
 html{
-  font-size: 16px;
+  font-size: 12px;
 }
 
 body {
@@ -40,7 +40,7 @@ body {
 
 .Header, .Footer {
   width: 100%;
-  background-color: blue;
+  background-color: rgb(0, 0, 255);
   padding: 1rem;
   display: flex;
   justify-content: space-between;
@@ -111,6 +111,27 @@ padding: 1rem;
 color: white;
 text-decoration:none;
 }
+
+.Nav li:hover,
+.Nav li:focus,
+.Nav li:hover a,
+.Nav li:focus a {
+  background-color: #eee;
+  color: #333
+}
+
+.Nav li:hover a,
+.Nav li:focus a{
+  cursor: pointer;
+}
+
+
+
+
+
+
+
+
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
